remove nav number and use array number

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <body>
         <header></header>
         <nav class="l_nav">
-            <a href="" class="l_nav__item active" data-nav="0">Tab-0</a>
-            <a href="" class="l_nav__item" data-nav="1">Tab-1</a>
-            <a href="" class="l_nav__item" data-nav="2">Tab-2</a>
+            <a href="" class="l_nav__item active">Tab-0</a>
+            <a href="" class="l_nav__item">Tab-1</a>
+            <a href="" class="l_nav__item">Tab-2</a>
         </nav>
         <main class="l_main">
             <div class="l_contents">
-                <div class="l_contents__item" data-content="0">タブその0</div>
-                <div class="l_contents__item" data-content="1">タブその1</div>
-                <div class="l_contents__item" data-content="2">タブその2</div>
+                <div class="l_contents__item">タブその0</div>
+                <div class="l_contents__item">タブその1</div>
+                <div class="l_contents__item">タブその2</div>
             </div>
         </main>
         <footer></footer>
